wf-list: fix overflow when workflow names are long
closes #245

--- a/reana-ui/src/pages/workflowList/components/WorkflowList.module.scss
+++ b/reana-ui/src/pages/workflowList/components/WorkflowList.module.scss
@@ -31,6 +31,7 @@
     align-items: baseline;
     flex-grow: 1;
     margin-right: 1em;
+    word-wrap: anywhere;
 
     .status-icon {
       padding-right: 20px;
